# lighthouse

./: .gitignore  CMakeLists.txt  test123.cpp  test123.ixx  vkfw.hpp.ifc
include/lighthouse/: Input.hpp  LightHouse.hpp  Output.hpp  Renderer.hpp  Window.hpp  bounding_volume.ixx  camera.ixx  collision.ixx  data_type.ixx  datatype.hpp  datatype.ixx  dear_imgui.ixx  engine.hpp  engine.ixx  entity.ixx  file_system.ixx  file_type.hpp  file_type.ixx  filesystem.hpp  geometry.ixx  imgui.ixx  input.hpp  input.ixx  lighthouse.hpp  math.ixx  memory.hpp  memory_mapped_span.ixx  memory_suballocator.ixx  node.hpp  node.ixx  object_index.ixx  output.hpp  output.ixx  physical_property.ixx  registry.ixx  renderer.hpp  scene.ixx  static.hpp  static_math.ixx  static_type.ixx  (+15 more)
include/lighthouse/input/: file_type.ixx  image_data.ixx  input.ixx  input_data.ixx  scene_data.ixx
include/lighthouse/lhd/: lhd_format.ixx
include/lighthouse/memory/: allocation_strategy.ixx  heap.ixx  mapped_span.ixx  memory_block.ixx  pool.ixx  suballocator.ixx  virtual_allocator.ixx
include/lighthouse/operating_system/: dynamic_linking.hpp  dynamic_linking.ixx  memory.hpp  memory.ixx  system.ixx
include/lighthouse/renderer/: bounding_volume.hpp  bounding_volume.ixx  color.ixx  dear_imgui.ixx  default_meshes.ixx  descriptor_layout.ixx  image_registry.ixx  index_format.hpp  light.ixx  material.ixx  mesh.hpp  mesh.ixx  mesh_registry.ixx  pipeline.ixx  pipeline_resource_generator.hpp  renderer.hpp  renderer.ixx  scene_loader.hpp  scene_loader.ixx  scene_reader.ixx  skybox.ixx  user_interface.ixx  vertex.hpp
include/lighthouse/renderer/vulkan/: buffer.hpp  buffer.ixx  command_control.hpp  command_control.ixx  debug_messanger.hpp  debug_messanger.ixx  descriptor_buffer.hpp  descriptor_buffer.ixx  descriptor_resource_buffer.ixx  descriptor_set_layout.hpp  descriptor_set_layout.ixx  dynamic_rendering_state.ixx  extension.hpp  extension.ixx  global_descriptor.ixx  image.hpp  image.ixx  image_view.ixx  index_format.hpp  index_format.ixx  instance.hpp  instance.ixx  logical_device.hpp  logical_device.ixx  memory_allocator.hpp  memory_allocator.ixx  physical_device.hpp  physical_device.ixx  pipeline.ixx  pipeline_resource_generator.hpp  pipeline_resource_generator.ixx  push_constant.ixx  push_constant_format.ixx  queue.ixx  queue_families.ixx  raii_wrapper.hpp  raii_wrapper.ixx  sampler.hpp  sampler.ixx  shader_input.hpp  (+28 more)
include/lighthouse/string/: lh_string.ixx  string.hpp  string.ixx  string_convertible.hpp  string_convertible.ixx
include/lighthouse/vulkan/: buffer.hpp  command_control.hpp  debug_messanger.hpp  descriptor_buffer.hpp  descriptor_collection.hpp  descriptor_set.hpp  descriptor_set_layout.hpp  extension.hpp  image.hpp  instance.hpp  logical_device.hpp  memory_allocator.hpp  physical_device.hpp  pipeline.hpp  queue.hpp  queue_families.hpp  raii_wrapper.hpp  sampler.hpp  shader_module.hpp  shader_object.hpp  shader_object_pipeline.hpp  spir_v.hpp  string.hpp  surface.hpp  swapchain.hpp  utility.hpp  vertex_buffer.hpp  vulkan.hpp
module/std/: std.ixx
module/vulkan/: vulkan.cppm
source/lighthouse/: bounding_volume.cpp  camera.cpp  dear_imgui.cpp  engine.cpp  entity.cpp  file_system.cpp  filesystem.cpp  geometry.cpp  imgui.cpp  input.cpp  lighthouse.cpp  memory.cpp  memory_mapped_span.cpp  memory_suballocator.cpp  node.cpp  output.cpp  physical_property.cpp  renderer.cpp  scene.cpp  system.cpp  time.cpp  version.cpp  vulkan.cpp  window.cpp
source/lighthouse/input/: image_data.cpp  input.cpp  input_data.cpp  scene_data.cpp
source/lighthouse/memory/: virtual_allocator.cpp
source/lighthouse/operating_system/: dynamic_linking.cpp  memory.cpp
source/lighthouse/renderer/: bounding_volume.cpp  color.cpp  dear_imgui.cpp  default_meshes.cpp  light.cpp  material.cpp  mesh.cpp  mesh_registry.cpp  pipeline.cpp  renderer.cpp  scene_loader.cpp  scene_reader.cpp  shader_registry.cpp  skybox.cpp  user_interface.cpp
source/lighthouse/renderer/vulkan/: buffer.cpp  command_control.cpp  debug_messanger.cpp  descriptor_buffer.cpp  descriptor_resource_buffer.cpp  descriptor_set_layout.cpp  dynamic_rendering_state.cpp  extension.cpp  global_descriptor.cpp  image.cpp  image_view.cpp  instance.cpp  logical_device.cpp  memory_allocator.cpp  physical_device.cpp  pipeline.cpp  pipeline_resource_generator.cpp  queue.cpp  queue_families.cpp  sampler.cpp  shader_input.cpp  shader_module.cpp  shader_object.cpp  shader_object_pipeline.cpp  spir_v.cpp  surface.cpp  swapchain.cpp  texture.cpp  vertex_buffer.cpp  vulkan.cpp
source/lighthouse/vulkan/: buffer.cpp  command_control.cpp  debug_messanger.cpp  descriptor_buffer.cpp  descriptor_collection.cpp  descriptor_set_layout.cpp  extension.cpp  image.cpp  instance.cpp  logical_device.cpp  memory_allocator.cpp  physical_device.cpp  pipeline.cpp  queue.cpp  queue_families.cpp  sampler.cpp  shader_module.cpp  shader_object.cpp  shader_object_pipeline.cpp  spir_v.cpp  surface.cpp  swapchain.cpp  vertex_buffer.cpp  vulkan.cpp
source/std/: std.cpp
source/vulkan/: math.cpp  shaders.cpp  utils.cpp  vma_implementation.cpp
src/: LightHouse.cpp
src/lighthouse/: Input.cpp  LightHouse.cpp  Output.cpp  Renderer.cpp  Window.cpp  engine.cpp  filesystem.cpp  input.cpp  lighthouse.cpp  memory.cpp  node.cpp  output.cpp  renderer.cpp  version.cpp  vulkan.cpp
